users +deps +small fixes
